made the login flow

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -115,3 +115,6 @@
     background-color: var(--fundy-color-bg-warning);
     color: var(--fundy-color-warning);
 }
+.hidden{
+    display: none;
+}
