--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -20,7 +20,7 @@
     --fundy-color-secondary: #5f7eb6;
     --fundy-color-gray : #ced4da;
     --fundy-color-bg-success : #155724;
-    --fundy-color-success : #28a745;
+    --fundy-color-success : #2fc151;
     --fundy-color-bg-warning : #856404;
     --fundy-color-warning : #ffc107;
     --fundy-hover-primary: #43649a;
